feat: added generateEntropy method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "src/shims.d.ts"],
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
