--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vitest": "^0.9.2"
   },
   "dependencies": {
-    "js-sha256": "^0.9.0"
+    "js-sha256": "^0.9.0",
+    "nanoid": "^3.3.2"
   }
 }
